# MESmerize

./: .gitattributes  .gitignore  .gitmodules  .readthedocs.yaml  .travis.yml  CHANGELOG.md  Flowchart.py  ISSUE_TEMPLATE.md  MANIFEST.in  README.md  __main__.py  __main__new.py  bah.csv  build_snap  extract_stim_trace.py  mainwindow.py  mainwindow.ui  mesmerizeLogo_icon.psd  mesmerize_env.yml  openedfiles  peak_detect_drafting.py  pypi_build_instructions.md  pyproject.toml  readme-pypi.md  requirements-v0.3.txt  requirements.txt  requirements_rtd.txt  requirements_win.txt  setup.py  snapcraft.yaml  test_mb.py  test_module.py  test_pip_install.sh  viewer.py  welcome_window.py  welcome_window_pytemplate.py  welcome_window_pytemplate.ui  window_manager.py
MesmerizeCore/: ConfigWindow.py  DataTypes.py  Export.py  FileInput.py  ImgOut.py  ProjBrowser.py  ProjBrowser_pytemplate.py  ProjBrowser_template.py  ProjBrowser_template.ui  __init__.py  caimanMotionCorrect.py  caimanMotionCorrect_threading.py  config  configuration.py  configwindow.py  configwindow_template.ui  exporter_pytemplate.py  matlab.py  meta_editor_pytemplate.py  meta_editor_pytemplate.ui  misc_funcs.py  misc_widgets.py  packager.py  packager_new.py  preferences.py  preferences_pytemplate.py  projbrowser_tabtemplate.ui  startWindow.py  startWindow_pytemplate.py  startWindow_template.ui  stimMapWidget.py  stimMap_one_row_UI FILE.ui  stimMap_one_row_pytemplate.py  stimMap_template.py  stimMap_template.ui  welcome_window.py  welcome_window_pytemplate.py
analyser/: Compute.py  ComputeInterfaces.py  CurvePlotWindow_pytemplate.py  CurvePlotWindow_template.ui  CurvePlots_pytemplate.py  CurvePlots_template.ui  DataTypes.py  Extraction.py  HistoryWidget.py  Operations.py  PeakEditor.py  beeswarms_universal.py  compute_peak_features.py  datapoint_tracer.py  derivative_pytemplate.ui  flowchart.py  gui.py  mainwindow_pytemplate.py  matplotlib_widget.py  pca_gui.py  peak_base_editor_pytemplate.py  peak_base_editor_pytemplate.ui  peak_feature_extraction.py  plot_window.py  plot_window_pytemplate.py  processing_widget_pytemplate.ui  savgol_pytemplate.ui  simple_plot_window.py  stats_gui.py  stats_gui_pytemplate.py  stats_window.py  stats_window.ui  test_external.py  test_history.pik  trace_widget.ui  utils.py
analysis/: Operations.py  PeakEditor.py  __init__.py  datapoint_tracer.py  flowchart.py  peak_feature_extraction.py  simple_plot_window.py  stats_gui.py
caiman/: motion_correction.py
common/: __init__.py  configuration.py  misc_functions.py  process_utils.py  project_config_window.py  start.py  system_config_window.py  welcome_window.py  welcome_window_pytemplate.py  welcome_window_pytemplate.ui  window_manager.py
docs/: .buildinfo  Analysis_data_types_api.html  Overview.html  Transmission.html  Viewer_data_types_api.html  _config.yml  about.html  build_docs  genindex.html  index.html  index.md  mesmerizeLogo_icon.psd  objects.inv  overview.md  requirements.txt  search.html  searchindex.js
dummy_setup/: setup.py
mesmerize/: __init__.py  __main__.py  mesmerize
misc_widgets/: list_widget_dialog.py
plotter/: control_widget.ui
plotting/: control_widget.ui  datapoint_tracer.py  matplotlibformatter.py  matplotlibformatter.ui  matplotlibformatter_window.py  plot_window.py  plot_window.ui
project_manager/: project_browser.py  project_manager.py
pyqtgraphCore/: WidgetGroup.py
scripts/: travisScript.sh
settings/: configuration.py  system_config_window.py
source/: Overview.rst  citation_guide.rst  conf.py  index.rst  mesmerize.analysis.math.rst  mesmerize.analysis.rst  mesmerize.common.rst  mesmerize.docs.rst  mesmerize.misc_widgets.rst  mesmerize.plotting.rst  mesmerize.plotting.variants.rst  mesmerize.plotting.widgets.beeswarms.rst  mesmerize.plotting.widgets.cross_correlation.rst  mesmerize.plotting.widgets.curve_plot_window.rst  mesmerize.plotting.widgets.heatmap.rst  mesmerize.plotting.widgets.kshape.rst  mesmerize.plotting.widgets.lda.rst  mesmerize.plotting.widgets.peak_editor.rst  mesmerize.plotting.widgets.plot_window.rst  mesmerize.plotting.widgets.proportions.rst  mesmerize.plotting.widgets.rst  mesmerize.plotting.widgets.scatter.rst  mesmerize.plotting.widgets.sosd_fourier.rst  mesmerize.project_manager.project_browser.rst  mesmerize.project_manager.rst  mesmerize.rst  mesmerize.viewer.core.rst  mesmerize.viewer.image_menu.rst  mesmerize.viewer.image_utils.rst  mesmerize.viewer.modules.batch_run_modules.rst  mesmerize.viewer.modules.custom_modules.rst  mesmerize.viewer.modules.roi_manager_modules.read_imagej.rst  mesmerize.viewer.modules.roi_manager_modules.rst  mesmerize.viewer.modules.rst  mesmerize.viewer.modules.script_editor_modules.rst  mesmerize.viewer.modules.stimmap_modules.rst  mesmerize.viewer.rst  modules.rst  setup.rst  tests.rst
tests/: batch_manager.py  cross_correlation.py  (+9 more)
(+884 files in other folders)
