[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "mesmerize"
author = "Kushal Kolar"
author-email = "kushalkolar@gmail.com"
home-page = "https://github.com/kushalkolar/MESmerize"
classifiers = [
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
        "Operating System :: POSIX :: Linux",
        "Operating System :: MacOS :: MacOS X",
        "Operating System :: Microsoft :: Windows :: Windows 10",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Image Recognition",
        "Topic :: Scientific/Engineering :: Information Analysis",
        "Topic :: Scientific/Engineering :: Visualization",
        "Intended Audience :: Science/Research"
]
requires = [
        # Fundamental
        "numpy==1.21.3",
        "pandas==1.3.4",
        "tifffile==2021.11.2",
        "psutil==5.8.0",
        "tables>=3.6.1",
        "h5py==2.10.0",
        "numba>=0.50.0",
        "pyqtgraph==0.12.3",
        "click==8.0.3",
        "opencv-contrib-python>=4.2",
        "opencv-python>=4.2",
        
        # Widgets
        "PyQt5>=5.9.2,<=5.12",
        "QtPy>=1.6.0",
        "qtap==0.1.2",
        "spyder==3.3.3",
        "tqdm>=4.37.0",
        
        # Plotting
        "matplotlib<=3.2.1",
        "seaborn>=0.9.0,<1.0.0",
        "bokeh>=2.4.0,<2.5.0",
        "graphviz>=0.13",
        
        # Distribution
        "ipyparallel>=6.3",
        "joblib>=0.15.1",
        
        # Machine Learning
        "tslearn==0.5.2",
        "scikit-video==1.1.11",
        "scikit-learn<=1.0.0",
        "scipy>=1.2.1,<2.0.0",
        
        
        # Parser
        "xmltodict",
]
description-file = "README.md"
requires-python = ">=3.6.1"

[tool.flit.metadata.urls]
Documentation = "http://docs.mesmerizelab.org/en/master/"

[tool.flit.metadata.requires-extra]
test = [
        "pytest",
        "mypy",
        "flake8 >=3.8.3,<4.0.0",
        "black ==21.9b0",
        "isort >=5.0.6,<6.0.0",
        "pytest-cov >=2.12.0,<4.0.0",
]

doc = [
        "mkdocs >=1.1.2,<2.0.0",
        "mkdocs-material >=7.1.9,<8.0.0",
        "mdx-include >=1.4.1,<2.0.0",
        "mkdocs-markdownextradata-plugin >=0.1.7,<0.3.0",
        "pyyaml >=5.3.1,<6.0.0",
]

notebook = [
        "jupyter",
]

nuset = [
        "nuset-lib==0.1.1",
        "scikit-image==0.15.0",
]

[tool.isort]
profile = "black"
#known_third_party = []
